--- a/js/dom/score_keeper/style.css
+++ b/js/dom/score_keeper/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #5B4E77;
   color: #fce03f;
-  font-family: 'Patrick Hand SC', cursive;
+  font-family: 'Patrick Hand SC', regular;
 }
 
 .content {
@@ -26,7 +26,7 @@ input {
   background-color: transparent;
   color: #fce03f;
   border-radius: 20px;
-  font-family: 'Patrick Hand SC', cursive;
+  font-family: 'Patrick Hand SC', regular;
   padding: 10px;
   width: 100px;
   height: 50px;
@@ -40,7 +40,7 @@ button {
   background-color: transparent;
   color: #fce03f;
   border-radius: 20px;
-  font-family: 'Patrick Hand SC', cursive;
+  font-family: 'Patrick Hand SC', regular;
 }
 
 .victory {
